--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,11 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+keras = "*"
+keras-rl = "*"
+gym = "*"
+tensorflow = "*"
+tensorflow-cpu = "*"
 
 [requires]
 python_version = "3.8"
