--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 version: '3.7'
 services:
     tensorflow:
+        build:
+            context: .
+            dockerfile: Dockerfile
         container_name: tensorflow
-        image: tensorflow/tensorflow:latest-py3-jupyter
         volumes:
             - ./dqncatp:/home/
         tty: true
